--- a/_data/tags_de.yml
+++ b/_data/tags_de.yml
@@ -1029,9 +1029,6 @@ COVID-19:
 - - 'Zusammenhang zwischen dem Vitamin-D-Status und dem Risiko einer Covid-19-Krankenhausmortalität:
     Eine systematische Überprüfung und Meta-Analyse von Beobachtungsstudien'
   - "/studies/2021/12/09/2021-12-09_10.1080_10408398.2021.2012419.html"
-- - 'Die Rolle von Vitamin D im Zeitalter von COVID-19: Eine systematische Überprüfung
-    und Meta-Analyse'
-  - "/studies/2021/08/06/2021-08-06_10.1111_ijcp.14675.html"
 - - Risikofaktoren im Zusammenhang mit den klinischen Ergebnissen von COVID-19 und
     seinen Varianten im Kontext von Zytokinstürmen und Herausforderungen bei der Entwicklung
     von Therapien/Impfstoffen
@@ -2014,6 +2011,8 @@ Vitamin D:
     das Ergebnis bei Patienten über 65 Jahren mit Covid-19: Umfassende Erfahrung eines
     Tertiärzentrums'
   - "/studies/2021/11/22/2021-11-22_10.31086_tjgeri.2021.254.html"
+- - Vitamine D, C und COVID-19
+  - "/studies/2022/01/25/2022-01-25_10.51793_OS.2022.25.1.002.html"
 - - 'Leitartikel: Ein Überblick über Mikronährstoffe und das Immunsystem - Zusammenarbeit
     im Einklang zur Verringerung des Infektionsrisikos'
   - "/studies/2021/11/22/2021-11-22_10.3390_nu13114180.html"
@@ -2183,6 +2182,9 @@ Vitamin D:
 - - 'Untersuchung des Potenzials von ultraviolettem Licht zur Beeinflussung der Morbidität
     und Mortalität durch COVID-19: Ein narrativer Rückblick und Update'
   - "/studies/2020/12/23/2020-12-23_10.3389_fcvm.2020.616527.html"
+- - Bewertung des Zusammenhangs zwischen Serum-Vitamin D und Morbidität und Mortalität
+    bei Patienten mit COVID-19
+  - "/studies/2021/08/11/2021-08-11_10.31579_2693-2156_026.html"
 - - 'Niedriger Vitamin-D-Status steht in Zusammenhang mit den Ergebnissen der Coronavirus-Erkrankung
     2019: eine systematische Überprüfung und Meta-Analyse'
   - "/studies/2021/03/01/2021-03-01_10.1016_j.ijid.2020.12.077.html"
@@ -2340,9 +2342,6 @@ Vitamin D:
 - - 'Zusammenhang zwischen dem Vitamin-D-Status und dem Risiko einer Covid-19-Krankenhausmortalität:
     Eine systematische Überprüfung und Meta-Analyse von Beobachtungsstudien'
   - "/studies/2021/12/09/2021-12-09_10.1080_10408398.2021.2012419.html"
-- - 'Die Rolle von Vitamin D im Zeitalter von COVID-19: Eine systematische Überprüfung
-    und Meta-Analyse'
-  - "/studies/2021/08/06/2021-08-06_10.1111_ijcp.14675.html"
 - - Kartierung der Wirkung von Medikamenten auf ACE2 als neuartigem Zielort für die
     COVID-19-Therapie
   - "/studies/2021/05/01/2021-05-01_0.26355_eurrev_202105_25963.html"
@@ -2558,6 +2557,9 @@ Calcidiol:
 - - 'Vitamin-D-Dosierung: Grundlegende Prinzipien und ein kurzer Algorithmus (Update
     2021)'
   - "/studies/2021/12/10/2021-12-10_10.3390_nu13124415.html"
+- - Bewertung des Zusammenhangs zwischen Serum-Vitamin D und Morbidität und Mortalität
+    bei Patienten mit COVID-19
+  - "/studies/2021/08/11/2021-08-11_10.31579_2693-2156_026.html"
 - - 'Das COVID-19-Mortalitätsrisiko korreliert umgekehrt mit dem Vitamin-D3-Status,
     und eine Mortalitätsrate nahe Null könnte theoretisch bei 50 ng/ml 25(OH)D3 erreicht
     werden: Ergebnisse einer systematischen Überprüfung und Meta-Analyse'
@@ -2965,6 +2967,10 @@ Zink:
   - "/studies/2022/01/13/2022-01-13_10.1016_j.clnesp.2021.12.033.html"
 - - Spurenelemente als Immunregulatoren bei SARS-CoV-2 und anderen viralen Infektionen
   - "/studies/2021/02/12/2021-02-12_10.1007_s12291-021-00961-6.html"
+- - 'Zink zur Vorbeugung oder Behandlung von akuten viralen Atemwegsinfektionen bei
+    Erwachsenen: eine schnelle systematische Überprüfung und Meta-Analyse von randomisierten
+    kontrollierten Studien'
+  - "/studies/2021/11/02/2021-11-02_10.1136_bmjopen-2020-047474.html"
 - - 'Wirkung von Mikronährstoffsupplementen auf Influenza und andere Atemwegsinfektionen
     bei Erwachsenen: eine systematische Übersichtsarbeit und Meta-Analyse'
   - "/studies/2020/01/19/2021-01-19_10.1136_bmjgh-2020-003176.html"
@@ -4435,9 +4441,6 @@ Immunsystem:
   - "/studies/2021/08/21/2021-08-21_10.5455_medarh.2021.75.307-312.html"
 - - 'Die Rolle von Vitamin D im Zeitalter von COVID-19: Eine systematische Überprüfung
     und Meta-Analyse'
-  - "/studies/2021/08/06/2021-08-06_10.1111_ijcp.14675.html"
-- - 'Die Rolle von Vitamin D im Zeitalter von COVID-19: Eine systematische Überprüfung
-    und Meta-Analyse'
   - "/studies/2021/07/29/2021-07-29_10.1111_ijcp.14675.html"
 - - Antivirale funktionelle Lebensmittel und sportlicher Lebensstil - Prävention des
     Coronavirus
@@ -4522,12 +4525,6 @@ Online-Gesundheitsinformationen:
 - - 'Qualität und Inhalt von Online-Informationen zum Thema "Immunitätsstärkung" während
     der COVID-19-Pandemie: Vergleich von Google und DuckDuckGo'
   - "/studies/2022/01/01/2022-01-01_10.21276_pjhs.2022.9.1.42.html"
-vitamin D:
-- - Vitamine D, C und COVID-19
-  - "/studies/2022/01/25/2022-01-25_10.51793_OS.2022.25.1.002.html"
-- - Bewertung des Zusammenhangs zwischen Serum-Vitamin D und Morbidität und Mortalität
-    bei Patienten mit COVID-19
-  - "/studies/2021/08/11/2021-08-11_10.31579_2693-2156_026.html"
 demographische Faktoren:
 - - 'Epidemiologische Merkmale von hospitalisierten Patienten mit mäßiger versus schwerer
     COVID-19-Infektion: Eine retrospektive Kohortenstudie an einem einzigen Zentrum'
@@ -5128,6 +5125,10 @@ Prävention:
 - - 'Stärkung der Immunität bei Virusinfektionen, mit besonderer Berücksichtigung
     von COVID-19: Ein Überblick'
   - "/studies/2020/04/16/2020-04-16_10.1016_j.dsx.2020.04.015.html"
+- - 'Zink zur Vorbeugung oder Behandlung von akuten viralen Atemwegsinfektionen bei
+    Erwachsenen: eine schnelle systematische Überprüfung und Meta-Analyse von randomisierten
+    kontrollierten Studien'
+  - "/studies/2021/11/02/2021-11-02_10.1136_bmjopen-2020-047474.html"
 - - 'Der Zusammenhang zwischen Vitamin D und der Darmmikrobiota: Eine systematische
     Überprüfung von Humanstudien'
   - "/studies/2021/09/26/2021-09-26_10.3390_nu13103378.html"
@@ -5538,6 +5539,10 @@ Behandlung:
     besseren 3-Monats-Überlebensrate bei geriatrischen Patienten einher: Verlängerungsphase
     der GERIA-COVID-Studie'
   - "/studies/2021/07/29/2021-07-29_10.1016_j.jsbmb.2021.105958.html"
+- - 'Zink zur Vorbeugung oder Behandlung von akuten viralen Atemwegsinfektionen bei
+    Erwachsenen: eine schnelle systematische Überprüfung und Meta-Analyse von randomisierten
+    kontrollierten Studien'
+  - "/studies/2021/11/02/2021-11-02_10.1136_bmjopen-2020-047474.html"
 - - 'Intravenöses hochdosiertes Vitamin C zur Behandlung von schwerem COVID-19: Studienprotokoll
     für eine multizentrische randomisierte kontrollierte Studie'
   - "/studies/2020/07/08/2020-07-08_10.1136_bmjopen-2020-039519.html"
@@ -7982,27 +7987,29 @@ Risikopatienten:
 - - 'Untersuchung des Potenzials von ultraviolettem Licht zur Beeinflussung der Morbidität
     und Mortalität durch COVID-19: Ein narrativer Rückblick und Update'
   - "/studies/2020/12/23/2020-12-23_10.3389_fcvm.2020.616527.html"
-2019 novel-coronavirus:
+2019 neuartiges Coronavirus:
 - - Bewertung des Zusammenhangs zwischen Serum-Vitamin D und Morbidität und Mortalität
     bei Patienten mit COVID-19
   - "/studies/2021/08/11/2021-08-11_10.31579_2693-2156_026.html"
-calcidiol:
+Prognose:
 - - Bewertung des Zusammenhangs zwischen Serum-Vitamin D und Morbidität und Mortalität
     bei Patienten mit COVID-19
   - "/studies/2021/08/11/2021-08-11_10.31579_2693-2156_026.html"
-prognosis:
+- - Kein unabhängiger Zusammenhang zwischen körperlicher Aktivität und klinischen
+    Ergebnissen bei hospitalisierten Patienten mit mittelschwerer bis schwerer COVID-19
+  - "/studies/2021/08/21/2021-08-21_10.1016_j.jshs.2021.08.001.html"
+- - 'Auswirkungen von Vitamin D auf COVID-19-Infektion und Prognose: Eine systematische
+    Übersicht'
+  - "/studies/2021/01/07/2021-01-07_10.2147_RMHP.S291584.html"
+Sars-Cov:
 - - Bewertung des Zusammenhangs zwischen Serum-Vitamin D und Morbidität und Mortalität
     bei Patienten mit COVID-19
   - "/studies/2021/08/11/2021-08-11_10.31579_2693-2156_026.html"
-sars-cov:
+Coronaviridae:
 - - Bewertung des Zusammenhangs zwischen Serum-Vitamin D und Morbidität und Mortalität
     bei Patienten mit COVID-19
   - "/studies/2021/08/11/2021-08-11_10.31579_2693-2156_026.html"
-coronaviridae:
-- - Bewertung des Zusammenhangs zwischen Serum-Vitamin D und Morbidität und Mortalität
-    bei Patienten mit COVID-19
-  - "/studies/2021/08/11/2021-08-11_10.31579_2693-2156_026.html"
-Brazil:
+Brasilien:
 - - Bewertung des Zusammenhangs zwischen Serum-Vitamin D und Morbidität und Mortalität
     bei Patienten mit COVID-19
   - "/studies/2021/08/11/2021-08-11_10.31579_2693-2156_026.html"
@@ -8010,11 +8017,11 @@ WHO:
 - - Bewertung des Zusammenhangs zwischen Serum-Vitamin D und Morbidität und Mortalität
     bei Patienten mit COVID-19
   - "/studies/2021/08/11/2021-08-11_10.31579_2693-2156_026.html"
-acute respiratory disease syndrome:
+akutes respiratorisches Krankheitssyndrom:
 - - Bewertung des Zusammenhangs zwischen Serum-Vitamin D und Morbidität und Mortalität
     bei Patienten mit COVID-19
   - "/studies/2021/08/11/2021-08-11_10.31579_2693-2156_026.html"
-thrombomodulin:
+Thrombomodulin:
 - - Bewertung des Zusammenhangs zwischen Serum-Vitamin D und Morbidität und Mortalität
     bei Patienten mit COVID-19
   - "/studies/2021/08/11/2021-08-11_10.31579_2693-2156_026.html"
@@ -8049,13 +8056,6 @@ Körperliche Inaktivität:
 - - Kein unabhängiger Zusammenhang zwischen körperlicher Aktivität und klinischen
     Ergebnissen bei hospitalisierten Patienten mit mittelschwerer bis schwerer COVID-19
   - "/studies/2021/08/21/2021-08-21_10.1016_j.jshs.2021.08.001.html"
-Prognose:
-- - Kein unabhängiger Zusammenhang zwischen körperlicher Aktivität und klinischen
-    Ergebnissen bei hospitalisierten Patienten mit mittelschwerer bis schwerer COVID-19
-  - "/studies/2021/08/21/2021-08-21_10.1016_j.jshs.2021.08.001.html"
-- - 'Auswirkungen von Vitamin D auf COVID-19-Infektion und Prognose: Eine systematische
-    Übersicht'
-  - "/studies/2021/01/07/2021-01-07_10.2147_RMHP.S291584.html"
 niedriger Vitamin-D-Status:
 - - 'Niedriger Vitamin-D-Status steht in Zusammenhang mit den Ergebnissen der Coronavirus-Erkrankung
     2019: eine systematische Überprüfung und Meta-Analyse'
@@ -9771,13 +9771,6 @@ Vaskulitis:
 ACE/ACE2:
 - - Molekulare Grundlagen für die Pharmakotherapie von COVID -19
   - "/studies/2021/05/01/2021-05-01_medical-and-clinical-research_ISSN_2577-8005.html"
-Regulierung der Zytokinantwort:
-- - 'Die Rolle von Vitamin D im Zeitalter von COVID-19: Eine systematische Überprüfung
-    und Meta-Analyse'
-  - "/studies/2021/08/06/2021-08-06_10.1111_ijcp.14675.html"
-- - 'Die Rolle von Vitamin D im Zeitalter von COVID-19: Eine systematische Überprüfung
-    und Meta-Analyse'
-  - "/studies/2021/07/29/2021-07-29_10.1111_ijcp.14675.html"
 SARS-CoV-1:
 - - Risikofaktoren im Zusammenhang mit den klinischen Ergebnissen von COVID-19 und
     seinen Varianten im Kontext von Zytokinstürmen und Herausforderungen bei der Entwicklung
@@ -9954,6 +9947,10 @@ nachhaltige Gesundheit:
 - - Auswirkungen eines dreimonatigen COVID-19-Lockdowns auf die Körpermasse und den
     Ernährungszustand von libanesischen Sportstudenten
   - "/studies/2022/01/21/2022-01-21-10.3390-su14031196.html"
+Regulierung der Zytokinantwort:
+- - 'Die Rolle von Vitamin D im Zeitalter von COVID-19: Eine systematische Überprüfung
+    und Meta-Analyse'
+  - "/studies/2021/07/29/2021-07-29_10.1111_ijcp.14675.html"
 neurologische Nebenwirkungen:
 - - Neurologische Nebenwirkungen der SARS-CoV-2-Impfung
   - "/studies/2021/11/08/2021-11-08_10.1111_ane.13550.html"
@@ -10267,22 +10264,7 @@ Aufnahme auf der Intensivstation:
   - "/studies/2021/06/24/2021-06-24_10.1007_s40618-021-01614-4.html"
 - - Calcifediol-Behandlung und COVID-19-bezogene Ergebnisse
   - "/studies/2021/06/07/2021-06-07_10.1210_clinem_dgab405.html"
-zinc:
-- - 'Zink zur Vorbeugung oder Behandlung von akuten viralen Atemwegsinfektionen bei
-    Erwachsenen: eine schnelle systematische Überprüfung und Meta-Analyse von randomisierten
-    kontrollierten Studien'
-  - "/studies/2021/11/02/2021-11-02_10.1136_bmjopen-2020-047474.html"
-prevention:
-- - 'Zink zur Vorbeugung oder Behandlung von akuten viralen Atemwegsinfektionen bei
-    Erwachsenen: eine schnelle systematische Überprüfung und Meta-Analyse von randomisierten
-    kontrollierten Studien'
-  - "/studies/2021/11/02/2021-11-02_10.1136_bmjopen-2020-047474.html"
-treatment:
-- - 'Zink zur Vorbeugung oder Behandlung von akuten viralen Atemwegsinfektionen bei
-    Erwachsenen: eine schnelle systematische Überprüfung und Meta-Analyse von randomisierten
-    kontrollierten Studien'
-  - "/studies/2021/11/02/2021-11-02_10.1136_bmjopen-2020-047474.html"
-acute viral respiratory tract infections:
+akute virale Infektionen der Atemwege:
 - - 'Zink zur Vorbeugung oder Behandlung von akuten viralen Atemwegsinfektionen bei
     Erwachsenen: eine schnelle systematische Überprüfung und Meta-Analyse von randomisierten
     kontrollierten Studien'
