--- a/_data/tags_de.yml
+++ b/_data/tags_de.yml
@@ -37,7 +37,7 @@ COVID-19:
 - - Die Bedeutung pflanzlicher Se-Verbindungen für die menschliche Gesundheit in der
     Ära der SARS-CoV-2 (COVID-19)-Pandemie
   - "/studies/2021/06/25/2021-06-25_10.3390_antiox10071031.html"
-- - Vitamine und andere immununterstützende Elemente als Kofaktoren für die Überwindung
+- - Vitamine und andere immununterstützende Elemente als Kofaktoren zur Überwindung
     der COVID-19-Pandemie
   - "/studies/2021/10/29/2021-10-29_10.1186_s43088-021-00163-2.html"
 - - 'SARS-CoV-2-Infektionsraten von Antikörper-positivem im Vergleich zu Antikörper-negativem
@@ -625,9 +625,6 @@ COVID-19:
 - - 'Covid-19 und die Auswirkungen auf das körperliche Aktivitätsniveau älterer Menschen:
     Eine systematische Überprüfung'
   - "/studies/2021/12/23/2021-12-23_10.1016_j.exger.2021.111675.html"
-- - Vitamine und andere immununterstützende Elemente als Kofaktoren für das Überstehen
-    der COVID-19-Pandemie
-  - "/studies/2021/10/14/2021-10-14_10.1186_s43088-021-00163-2.html"
 - - Der mögliche Nutzen von Vitamin D bei COVID-19
   - "/studies/2021/05/26/2021-05-26_10.1016_j.nut.2021.111356.html"
 - - Zusammenhang zwischen Vitamin D und COVID-19
@@ -1147,9 +1144,6 @@ COVID-19:
 - - 'Polyanion-Immunkomplexe des Thrombozytenfaktors 4: Heparin-induzierte Thrombozytopenie
     und durch Impfstoffe ausgelöste immunthrombotische Thrombozytopenie.'
   - "/studies/2021/09/15/2021-09-15_10.1186_s12959-021-00318-2.html"
-- - Vitamine und andere immununterstützende Elemente als Kofaktoren der Überwindung
-    der COVID-19-Pandemie
-  - "/studies/2021/10/29/2021-10-29_0.1186_s43088-021-00163-2.html"
 - - 'Voreingenommenheit als Ursache für Inkonsistenz in Ivermectin-Studien für COVID-19:
     Eine systematische Überprüfung. Die vermuteten Vorteile von Ivermectin beruhen
     hauptsächlich auf potenziell verzerrten Ergebnissen'
@@ -2835,7 +2829,7 @@ Vitamin-D-Mangel:
 Spurenelemente:
 - - Spurenelemente als Immunregulatoren bei SARS-CoV-2 und anderen viralen Infektionen
   - "/studies/2021/01/23/2021-01-23_10.1007_s12291-021-00961-6.html"
-- - Vitamine und andere immununterstützende Elemente als Kofaktoren für die Überwindung
+- - Vitamine und andere immununterstützende Elemente als Kofaktoren zur Überwindung
     der COVID-19-Pandemie
   - "/studies/2021/10/29/2021-10-29_10.1186_s43088-021-00163-2.html"
 - - 'COVID-19 und Selenmangel: ein systematischer Überblick'
@@ -2845,18 +2839,12 @@ Spurenelemente:
 - - 'Eine Literaturübersicht über die positive Rolle von Vitaminen und Spurenelementen:
     Evidenz aus veröffentlichten klinischen Studien '
   - "/studies/2021/05/15/2021-05-15_10.1016_j.jtemb.2021.126789.html"
-- - Vitamine und andere immununterstützende Elemente als Kofaktoren für das Überstehen
-    der COVID-19-Pandemie
-  - "/studies/2021/10/14/2021-10-14_10.1186_s43088-021-00163-2.html"
 - - Mögliche molekulare Mechanismen der Zink- und Kupfer-vermittelten antiviralen
     Aktivität auf COVID-19
   - "/studies/2021/06/13/2021-06-13_10.1016_j.nutres.2021.05.008.html"
 - - 'COVID-19: Ein Überblick über die Rolle von Spurenelementen in traditionellen
     saudi-arabischen Nahrungsergänzungsmitteln'
   - "/studies/2022/01/01/2022-01-01_10.3923_pjbs.2022.1.8.html"
-- - Vitamine und andere immununterstützende Elemente als Kofaktoren der Überwindung
-    der COVID-19-Pandemie
-  - "/studies/2021/10/29/2021-10-29_0.1186_s43088-021-00163-2.html"
 - - Spurenelemente als Immunregulatoren bei SARS-CoV-2 und anderen viralen Infektionen
   - "/studies/2021/02/12/2021-02-12_10.1007_s12291-021-00961-6.html"
 Zellvermittelte Immunität:
@@ -3420,7 +3408,7 @@ Selenoproteine:
 - - Von Selen zu Selenoproteinen - ihre Rolle bei COVID-19
   - "/studies/2021/04/16/2021-04-16_10.17179_excli2021-3530.html"
 Coronavirus:
-- - Vitamine und andere immununterstützende Elemente als Kofaktoren für die Überwindung
+- - Vitamine und andere immununterstützende Elemente als Kofaktoren zur Überwindung
     der COVID-19-Pandemie
   - "/studies/2021/10/29/2021-10-29_10.1186_s43088-021-00163-2.html"
 - - Moderate bis intensive körperliche Aktivität bei Jugendlichen in den USA während
@@ -3475,9 +3463,6 @@ Coronavirus:
 - - 'Vitamine, Nahrungsergänzungsmittel und COVID-19: eine Übersicht über die derzeit
     verfügbaren Daten'
   - "/studies/2021/10/06/2021-10-06_10.7573_dic.2021-6-2.html"
-- - Vitamine und andere immununterstützende Elemente als Kofaktoren für das Überstehen
-    der COVID-19-Pandemie
-  - "/studies/2021/10/14/2021-10-14_10.1186_s43088-021-00163-2.html"
 - - Übersicht über die verfügbaren Erkenntnisse über Hesperidin-reiche Produkte als
     potenzielle Mittel gegen COVID-19 und die auf hydrodynamischer Kavitation basierende
     Extraktion als Methode zur Steigerung ihrer Produktion
@@ -3522,9 +3507,6 @@ Coronavirus:
   - "/studies/2021/06/28/2021-06-28_10.3390_nu13072216.html"
 - - 'Vitamin D und COVID-19: Ein Überblick über die jüngste Evidenz'
   - "/studies/2021/09/29/2021-09-29_10.3390_ijms221910559.html"
-- - Vitamine und andere immununterstützende Elemente als Kofaktoren der Überwindung
-    der COVID-19-Pandemie
-  - "/studies/2021/10/29/2021-10-29_0.1186_s43088-021-00163-2.html"
 - - Wahrgenommene Einschränkungen während der COVID-19-Pandemie bei älteren Personen
     in der Schweiz
   - "/studies/2022/01/10/2022-01-10_10.1007_s16024-021-00364-w.html"
@@ -3536,7 +3518,7 @@ Coronavirus:
     die COVID-19-Infektion
   - "/studies/2021/07/30/2021-07-30_10.1007_s00203-021-02482-5.html"
 Ernährung:
-- - Vitamine und andere immununterstützende Elemente als Kofaktoren für die Überwindung
+- - Vitamine und andere immununterstützende Elemente als Kofaktoren zur Überwindung
     der COVID-19-Pandemie
   - "/studies/2021/10/29/2021-10-29_10.1186_s43088-021-00163-2.html"
 - - Frühe Ernährungsinterventionen mit Zink, Selen und Vitamin D zur Erhöhung der
@@ -3580,9 +3562,6 @@ Ernährung:
   - "/studies/2021/08/08/2021-08-08_10.3390_ijms22168532.html"
 - - 'Das Zusammenspiel von Ernährung und COVID-19: ein Überblick'
   - "/studies/2021/10/10/2021-10-10_10.1007_s13668-021-00380-2.html"
-- - Vitamine und andere immununterstützende Elemente als Kofaktoren für das Überstehen
-    der COVID-19-Pandemie
-  - "/studies/2021/10/14/2021-10-14_10.1186_s43088-021-00163-2.html"
 - - 'Die Auswirkungen der Lockdowns während der COVID-19-Pandemie auf das Lebensstilverhalten
     und die Veränderung des Körpergewichts: Ergebnisse der Online-Umfrage MyNutriLifeCOVID-19'
   - "/studies/2022/01/18/2022-01-18_10.1371_journal.pone.0262332.html"
@@ -3615,9 +3594,6 @@ Ernährung:
 - - Vitamin- und Mineralstoffverwendung und Teilnahme an sportlichen Aktivitäten während
     der Coronavirus-19-Pandemie
   - "/studies/2021/10/01/2021-10-01_pakistan-journal-of-medical-health-and-health-sciences_pjmhs2115102957.html"
-- - Vitamine und andere immununterstützende Elemente als Kofaktoren der Überwindung
-    der COVID-19-Pandemie
-  - "/studies/2021/10/29/2021-10-29_0.1186_s43088-021-00163-2.html"
 - - 'Die Rolle der Ernährung bei der Anfälligkeit für COVID-19 und der Schwere der
     Erkrankung: Systematische Überprüfung'
   - "/studies/2021/05/19/2021-05-19_10.1093_jn_nxab059.html"
@@ -3628,7 +3604,7 @@ Ernährung:
     gesunde menschliche Ernährung'
   - "/studies/2020/12/03/2020-12-03_10.1007_s11104-020-04635-9.html"
 Vitamine:
-- - Vitamine und andere immununterstützende Elemente als Kofaktoren für die Überwindung
+- - Vitamine und andere immununterstützende Elemente als Kofaktoren zur Überwindung
     der COVID-19-Pandemie
   - "/studies/2021/10/29/2021-10-29_10.1186_s43088-021-00163-2.html"
 - - Vitamine D, C und COVID-19
@@ -3651,9 +3627,6 @@ Vitamine:
     Die potenziellen biotherapeutischen Wirkungen von Vitaminen und Mineralien in
     COVID-19'
   - "/studies/2022/01/20/2022-01-20_10.1111_jfbc.14079.html"
-- - Vitamine und andere immununterstützende Elemente als Kofaktoren für das Überstehen
-    der COVID-19-Pandemie
-  - "/studies/2021/10/14/2021-10-14_10.1186_s43088-021-00163-2.html"
 - - 'Aufnahme von Nahrungsergänzungsmitteln während der zweiten Welle der COVID-19-Pandemie:
     Eine multinationale Studie aus dem Nahen Osten'
   - "/studies/2022/01/12/2022-01-12_10.1016_j.eujim.2022.102102.html"
@@ -3679,14 +3652,11 @@ Vitamine:
 - - Optimaler Ernährungszustand für ein gut funktionierendes Immunsystem ist ein wichtiger
     Faktor zum Schutz vor Virusinfektionen
   - "/studies/2020/04/23/2020-04-23_10.3390_nu12041181.html"
-- - Vitamine und andere immununterstützende Elemente als Kofaktoren der Überwindung
-    der COVID-19-Pandemie
-  - "/studies/2021/10/29/2021-10-29_0.1186_s43088-021-00163-2.html"
 - - Zusammenhang zwischen Vitamin-D-Status und Antikörperreaktion auf COVID-19 mRNA-Impfung
     bei gesunden Erwachsenen
   - "/studies/2021/11/18/2021-11-18_10.3390_biomedicines9111714.html"
 Immunität:
-- - Vitamine und andere immununterstützende Elemente als Kofaktoren für die Überwindung
+- - Vitamine und andere immununterstützende Elemente als Kofaktoren zur Überwindung
     der COVID-19-Pandemie
   - "/studies/2021/10/29/2021-10-29_10.1186_s43088-021-00163-2.html"
 - - Zink(II)-induzierte immunologische antivirale Aktivitäten zur Prävention von COVID-19,
@@ -3705,9 +3675,6 @@ Immunität:
   - "/studies/2020/12/07/2020-12-07_10.1016_j.numecd.2020.12.001.html"
 - - 'Die schützende Rolle von Vitamin C bei der Behandlung von COVID-19:  Review'
   - "/studies/2021/12/11/2021-12-11_10.1186_s42506-021-00095-w.html"
-- - Vitamine und andere immununterstützende Elemente als Kofaktoren für das Überstehen
-    der COVID-19-Pandemie
-  - "/studies/2021/10/14/2021-10-14_10.1186_s43088-021-00163-2.html"
 - - Ein mechanistischer Zusammenhang zwischen Selen und Coronavirus-Erkrankungen 2019
     (COVID-19)
   - "/studies/2021/03/23/2021-03-23_10.1007_s13668-021-00354-4.html"
@@ -3735,9 +3702,6 @@ Immunität:
   - "/studies/2020/04/16/2020-04-16_10.1016_j.dsx.2020.04.015.html"
 - - 'Vitamin D und COVID-19: Ein Überblick über die jüngste Evidenz'
   - "/studies/2021/09/29/2021-09-29_10.3390_ijms221910559.html"
-- - Vitamine und andere immununterstützende Elemente als Kofaktoren der Überwindung
-    der COVID-19-Pandemie
-  - "/studies/2021/10/29/2021-10-29_0.1186_s43088-021-00163-2.html"
 - - Jüngste Fortschritte bei der Anwendbarkeit der Sportimmunologie und Entzündungsforschung
     auf die Sporternährung
   - "/studies/2021/11/28/2021-11-28_10.3390_nu13124299.html"
