--- a/_data/groups.yml
+++ b/_data/groups.yml
@@ -13,4 +13,4 @@ Vaccines:
   en_name: Vaccines
 Interventions:
   de_name: Nichtmedizinische Maßnahmen
-  en_name: Non-medical interventions
+  en_name: Non-Medical Interventions
