--- a/_data/tags_de.yml
+++ b/_data/tags_de.yml
@@ -1801,13 +1801,6 @@ Vitamin-D-verwandte Gene:
 - - Kontroverse Auswirkungen von Vitamin D und verwandten Genen auf Virusinfektionen,
     Pathogenese und Behandlungsergebnisse
   - "/studies/2020/03/30/10.3390-nu12040962.html"
-virale Infektion:
-- - Kontroverse Auswirkungen von Vitamin D und verwandten Genen auf Virusinfektionen,
-    Pathogenese und Behandlungsergebnisse
-  - "/studies/2020/03/30/10.3390-nu12040962.html"
-- - Antioxidative, entzündungshemmende und immunmodulatorische Wirkung von Vitaminen
-    in der COVID-19-Therapie
-  - "/studies/2022/02/04/10.1016-j.ejmech.2022.114175.html"
 Pathogenese:
 - - Kontroverse Auswirkungen von Vitamin D und verwandten Genen auf Virusinfektionen,
     Pathogenese und Behandlungsergebnisse
@@ -1819,6 +1812,18 @@ Behandlungsergebnis:
 - - Kontroverse Auswirkungen von Vitamin D und verwandten Genen auf Virusinfektionen,
     Pathogenese und Behandlungsergebnisse
   - "/studies/2020/03/30/10.3390-nu12040962.html"
+Virale Infektionen:
+- - Kontroverse Auswirkungen von Vitamin D und verwandten Genen auf Virusinfektionen,
+    Pathogenese und Behandlungsergebnisse
+  - "/studies/2020/03/30/10.3390-nu12040962.html"
+- - Die Bedeutung der Zinktherapie bei der Bekämpfung der globalen Pandemie COVID-19
+  - "/studies/2021/02/26/10.2147_JIR.S295377.html"
+- - Antioxidative, entzündungshemmende und immunmodulatorische Wirkung von Vitaminen
+    in der COVID-19-Therapie
+  - "/studies/2022/02/04/10.1016-j.ejmech.2022.114175.html"
+- - 'Unzureichende Beweise für die Verwendung von Vitamin D bei COVID-19: Eine schnelle
+    systematische Überprüfung'
+  - "/studies/2021/07/26/10.1111_ijcp.14649.html"
 Stürze:
 - - Auswirkung der COVID-19-Beschränkungen für den Aufenthalt zu Hause auf Stürze
     in einer Gemeinschaft älterer Menschen mit hohem Risiko
@@ -4068,12 +4073,6 @@ Wirksamkeit:
     wenn sie als tägliche Erhaltungsdosis, nicht aber als intermittierender Bolus
     verabreicht wird: Auswirkungen auf COVID-19'
   - "/studies/2021/02/16/10.7861_clinmed.2021-0035.html"
-virale Infektionen:
-- - Die Bedeutung der Zinktherapie bei der Bekämpfung der globalen Pandemie COVID-19
-  - "/studies/2021/02/26/10.2147_JIR.S295377.html"
-- - 'Unzureichende Beweise für die Verwendung von Vitamin D bei COVID-19: Eine schnelle
-    systematische Überprüfung'
-  - "/studies/2021/07/26/10.1111_ijcp.14649.html"
 Lungenentzündung:
 - - Die Bedeutung der Zinktherapie bei der Bekämpfung der globalen Pandemie COVID-19
   - "/studies/2021/02/26/10.2147_JIR.S295377.html"
