--- a/_data/tags_en.yml
+++ b/_data/tags_en.yml
@@ -1528,18 +1528,6 @@ vitamin D-related genes:
 - - Controversial Effects of Vitamin D and Related Genes on Viral Infections, Pathogenesis,
     and Treatment Outcomes
   - "/studies_en/2020/03/30/10.3390-nu12040962.html"
-viral infection:
-- - Controversial Effects of Vitamin D and Related Genes on Viral Infections, Pathogenesis,
-    and Treatment Outcomes
-  - "/studies_en/2020/03/30/10.3390-nu12040962.html"
-- - Optimal Nutritional Status for a Well-Functioning Immune System Is an Important
-    Factor to Protect against Viral Infections
-  - "/studies/2020/04/23/10.3390_nu12041181.html"
-- - Antiviral Functional Foods and Exercise Lifestyle Prevention of Coronavirus
-  - "/studies/2020/08/28/10.3390_nu12092633.html"
-- - Antioxidant, anti-inflammatory and immunomodulatory roles of vitamins in COVID-19
-    therapy
-  - "/studies/2022/02/04/10.1016-j.ejmech.2022.114175.html"
 pathogenesis:
 - - Controversial Effects of Vitamin D and Related Genes on Viral Infections, Pathogenesis,
     and Treatment Outcomes
@@ -1551,6 +1539,27 @@ treatment outcome:
 - - Controversial Effects of Vitamin D and Related Genes on Viral Infections, Pathogenesis,
     and Treatment Outcomes
   - "/studies_en/2020/03/30/10.3390-nu12040962.html"
+viral infections:
+- - Controversial Effects of Vitamin D and Related Genes on Viral Infections, Pathogenesis,
+    and Treatment Outcomes
+  - "/studies_en/2020/03/30/10.3390-nu12040962.html"
+- - The Implications of Zinc Therapy in Combating the COVID-19 Global Pandemic
+  - "/studies/2021/02/26/10.2147_JIR.S295377.html"
+- - 'Medicinal Plants and Zinc: Impact on COVID-19 Pandemic'
+  - "/studies/2021/09/23/10.1155_2021_9632034.html"
+- - Optimal Nutritional Status for a Well-Functioning Immune System Is an Important
+    Factor to Protect against Viral Infections
+  - "/studies/2020/04/23/10.3390_nu12041181.html"
+- - 'Enhancing immunity in viral infections, with special emphasis on COVID-19: A
+    review'
+  - "/studies/2020/04/16/10.1016_j.dsx.2020.04.015.html"
+- - Antiviral Functional Foods and Exercise Lifestyle Prevention of Coronavirus
+  - "/studies/2020/08/28/10.3390_nu12092633.html"
+- - Antioxidant, anti-inflammatory and immunomodulatory roles of vitamins in COVID-19
+    therapy
+  - "/studies/2022/02/04/10.1016-j.ejmech.2022.114175.html"
+- - 'Insufficient evidence for vitamin D use in COVID-19: A rapid systematic review'
+  - "/studies/2021/07/26/10.1111_ijcp.14649.html"
 falls:
 - - Impact of COVID-19 Stay-At-Home Restrictions on Falls in One Community of High-Risk
     Older Adults
@@ -3533,16 +3542,6 @@ efficacy:
 - - 'Efficacy and safety of ivermectin in the treatment of mild-to-moderate COVID-19
     infection: A randomized, double blind, placebo, controlled trial'
   - "/studies/2022/02/02/10.21203-rs.3.rs-1290999-v1.html"
-viral infections:
-- - The Implications of Zinc Therapy in Combating the COVID-19 Global Pandemic
-  - "/studies_en/2021/02/26/10.2147_JIR.S295377.html"
-- - 'Medicinal Plants and Zinc: Impact on COVID-19 Pandemic'
-  - "/studies/2021/09/23/10.1155_2021_9632034.html"
-- - 'Enhancing immunity in viral infections, with special emphasis on COVID-19: A
-    review'
-  - "/studies/2020/04/16/10.1016_j.dsx.2020.04.015.html"
-- - 'Insufficient evidence for vitamin D use in COVID-19: A rapid systematic review'
-  - "/studies/2021/07/26/10.1111_ijcp.14649.html"
 pneumonia:
 - - The Implications of Zinc Therapy in Combating the COVID-19 Global Pandemic
   - "/studies_en/2021/02/26/10.2147_JIR.S295377.html"
